fix: add explicit project-ref to Supabase function deployment in GitHub Actions
- Add --project-ref ynlnrvuqypmwpevabtdc to supabase functions deploy command
- This resolves authentication issues in GitHub Actions workflow
- Integration tests now properly reference the correct Supabase project

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -33,7 +33,7 @@ jobs:
         
     - name: Deploy test function
       run: |
-        supabase functions deploy test-hotel-availability
+        supabase functions deploy test-hotel-availability --project-ref ynlnrvuqypmwpevabtdc
       env:
         SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
